# ripdetectorfirmware

./: README.md  partitions.csv  sdkconfig  sdkconfig.old
dtlgr_data/: index.html  style.css
main/: CMakeLists.txt  Kconfig.projbuild  main.c  my_data.h  non_volatile_storage.c  non_volatile_storage.h  server_component.c  server_component.h  simple_ota_example.c  simple_ota_example.h  softap_sta.c  uart.c  uart.h  wifi.c  wifi.h  wifiStAp.c  wifiStAp.h
